# globalvpn

./: .editorconfig  .gitignore  Cargo.toml  README.md  architecture.md  protocol.md
.github/workflows/: test.yml
globalvpn-docs/: mkdocs.yml
globalvpn-docs/docs/: about.md  architecture.md  framing.md  index.md
globalvpn-docs/docs/packets/: index.md
globalvpn-proto/: Cargo.toml
globalvpn-proto/src/: main.rs  prelude.rs
globalvpn-proto/src/certificate/: metadata.rs  mod.rs  reachability.rs
globalvpn-proto/src/data/: mod.rs  nodeid.rs  signkey.rs
globalvpn-proto/src/protocol/: dataset.rs  error.rs  frame.rs  framing.md  handshake.rs  mod.rs  protocol.md  reachability.rs
src/: main.rs
src/data/: nodeid.rs
src/protocol/: dataset.rs  framing.md  protocol.md
