[package]
name = "globalvpn"
version = "0.1.0"
authors = ["Raphael Peters <rappet@rappet.de>"]
edition = "2018"

[dependencies]
bitflags = "1.2.1"

[dependencies.log]
version = "0.4"

[dependencies.env_logger]
version = "0.8"

[dependencies.thiserror]
version = "1"

[dependencies.anyhow]
version = "1"

[dependencies.derive_more]
version = "0.99"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.bytes]
version = "1"

[dependencies.smallvec]
version = "1"
features = ["serde", "union"]

[dependencies.sodiumoxide]
version = "0.2"
features = ["serde"]

[dependencies.tokio]
version = "1"
features = ["full"]

