[package]
name = "globalvpn"
version = "0.1.0"
authors = ["Raphael Peters <rappet@rappet.de>"]
edition = "2018"

[dependencies]
bitflags = "1.2.1"
log = "0.4"
env_logger = "0.9.0"
thiserror = "1"
anyhow = "1"
derive_more = "0.99"
rmp-serde = "0.15"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.bytes]
version = "1"

[dependencies.smallvec]
version = "1"
features = ["serde", "union"]

[dependencies.sodiumoxide]
version = "0.2"
features = ["serde"]

[dependencies.tokio]
version = "1"
features = ["full"]

