[package]
name = "globalvpn"
version = "0.1.0"
authors = ["Raphael Peters <rappet@rappet.de>"]
edition = "2018"

[dependencies]
bitflags = "1.2.1"
derive_more = "0.99"

log = "0.4"
env_logger = "0.9.0"

anyhow = "1"
thiserror = "1"

serde = { version = "1", features = ["derive"] }
rmp-serde = "0.15"
toml = "0.5.8"

der = { version = "0.4.0", features = ["derive"] }
x509-parser = "0.9.2"
rcgen = "0.8.11"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.bytes]
version = "1"

[dependencies.smallvec]
version = "1"
features = ["serde", "union"]

[dependencies.sodiumoxide]
version = "0.2"
features = ["serde"]

[dependencies.tokio]
version = "1"
features = ["full"]

